@@ -2,6 +2,7 @@ Version 3.5.0 ->
 ---------------------
  - renamed classes whose python name would not be unique in lucene module
  - refreshed Linux build options, added an OpenJDK 7 example
+ - added JavaList to collections.py, a Python java.util.List (Thomas Koch)
  - 
 
 Version 3.4 -> 3.5.0
